fix(footer): remove margin from footer for improved alignment

--- a/styles/join.css
+++ b/styles/join.css
@@ -337,7 +337,6 @@ header {
 /* FOOTER */
 footer {
   width: 250px;
-  margin: 16px auto;
   display: flex;
   justify-content: center;
 }
